--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
   p Welcome to #{title}
   .row
     div#panel.col-xs-12
+      input(type="time", id="timeToReturn", required)
       input(type='checkbox', id='newDest')
       |  A new place
       br
