--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,7 @@ html
     title= title
     link(rel="stylesheet",href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-     //- append the script to the head only once the 
-    script(src="//maps.googleapis.com/maps/api/js?v=3.exp")
+    //- script(src="//maps.googleapis.com/maps/api/js?v=3.exp")
   body
     block content
   
