--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,9 @@ html
     title= title
     link(rel="stylesheet",href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    //- script(src="//maps.googleapis.com/maps/api/js?v=3.exp")
+    script(src="//maps.googleapis.com/maps/api/js?v=3.exp")
   body
     block content
-  
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+  script(src="/javascripts/bundle.js")
   script(src="/javascripts/main.js")
