--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title}! Simply 
   .row
     // div.col-sm-12 Sign in to store your walks and see how much area you've explored!
     //   form(action="/auth/login", method="post")
@@ -19,3 +19,15 @@ block content
     #map-canvas.col-xs-12
     #directionsPanel.col-xs-12
     #warnings_panel(style='width:100%;height:10%;text-align:center')
+    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+      .modal-dialog
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-label='Close')
+              span(aria-hidden='true') ×
+            h4#myModalLabel.modal-title This is your phone:
+          .modal-body
+            | IT'S VIBRATING
+          .modal-footer
+            button.btn.btn-default(type='button', data-dismiss='modal') Close
+            button.btn.btn-primary(type='button') Save changes
