--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,6 @@ html
   body
     block content
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+  script(src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js")
   script(src="/javascripts/bundle.js")
   script(src="/javascripts/main.js")
