--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,12 +45,19 @@ a {
   100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-#myModal{
+/*#myModal{
   -webkit-animation-name: spaceboots;
   -webkit-animation-duration: 0.8s;
   -webkit-transform-origin:50% 50%;
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
-  height: 640px;
+}*/
+#phone{
+}
+#innerModalDiv{
+  border: 15px solid black;
+  border-bottom: 40px solid black;
+  border-top: 30px solid black;
+  height: 540px;
   width: 360px;
 }
