--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1= title
+  #logo 
+    img(src='../images/Aimless.svg', alt='Aimless', height="134", width="483")
   p Welcome to #{title}! Simply 
   .row
     // div.col-sm-12 Sign in to store your walks and see how much area you've explored!
