--- a/views/index.jade
+++ b/views/index.jade
@@ -1,31 +1,79 @@
 extends layout
 
 block content
+  nav.navbar.navbar-default.navbar-fixed-top
+    .container
+      .navbar-header
+        a.navbar-brand(href="#")
+          img(alt="Aimless", src="/images/AimlessA.svg", width="100px")
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+      #navbar.navbar-collapse.collapse(aria-expanded='false', style='height: 1px;')
+        ul.nav.navbar-nav
+          li.active
+            a(href='#')
+          li
+            a(href='#about') About
+          li
+            a(href='#contact') Contact
+          li.dropdown
+            a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+              | Dropdown 
+              span.caret
+            ul.dropdown-menu(role='menu')
+              li
+                a(href='#') Action
+              li
+                a(href='#') Another action
+              li
+                a(href='#') Something else here
+              li.divider
+              li.dropdown-header Nav header
+              li
+                a(href='#') Separated link
+              li
+                a(href='#') One more separated link
+        ul.nav.navbar-nav.navbar-right
+          li
+            a(href='../navbar/') Default
+          li
+            a(href='../navbar-static-top/') Static top
+          li.active
+            a(href='./')
+              | Fixed top 
+              span.sr-only (current)
+  .jumbotron.topTron
+    .container
+      .row
+        #logo.center-block
+          img(src='../images/Aimless.svg', alt='Aimless', class="col-xs-12 logo", id="aimlessLogo")
+  .jumbotron.bottomTron
+    .container
+      .row
+        p.col-xs-12.readText Going for an aimless walk? Simply select the time you need to be back by and we'll let you know when and how to go back.
+      
+        // div.col-sm-12 Sign in to store your walks and see how much area you've explored!
+        //   form(action="/auth/login", method="post")
+        //     input(type="email", name="email", placeholder="email")
+        //     input(type="password", name="password", placeholder="Password")
+        //     input(class="btn btn-primary",type="submit")
+      .row
+        div#panel
+          .col-xs-12
+            input(type="time", id="timeToReturn", required)
+          .col-xs-6.btnDiv
+            button.btn.btn-primary#newDestBtn
+              label(for="newDest") 
+                | Change Destination
+                input(type='checkbox', id='newDest')
+          .col-xs-6.slider.closed
+            input(type="text", placeholder="Your New Destination...", id="theirNewDest")
+      .row#successAndDone 
+        button(class='btn btn-success col-xs-12 theMainBtn', id="iAmWalking") I'm ready to get lost!
   .container
-    .row
-      #logo.center-block
-        img(src='../images/Aimless.svg', alt='Aimless', class="col-xs-12 logo")
-    .row
-      p.col-xs-12.readText Going for an aimless walk? Simply select the time you need to be back by and we'll let you know when and how to go back.
-    
-      // div.col-sm-12 Sign in to store your walks and see how much area you've explored!
-      //   form(action="/auth/login", method="post")
-      //     input(type="email", name="email", placeholder="email")
-      //     input(type="password", name="password", placeholder="Password")
-      //     input(class="btn btn-primary",type="submit")
-    .row
-      div#panel
-        .col-xs-6
-          input(type="time", id="timeToReturn", required)
-        .col-xs-6.btnDiv
-          button.btn.btn-primary#newDestBtn
-            label(for="newDest") 
-              | Change Destination
-              input(type='checkbox', id='newDest')
-        .col-xs-6.slider.closed
-          input(type="text", placeholder="Your New Destination...", id="theirNewDest")
-    .row#successAndDone 
-      button(class='btn btn-success col-xs-12 theMainBtn', id="iAmWalking") I'm ready to get lost!
     .row#mapRow
       .col-xs-offset-1.col-xs-10
         #map-canvas
