--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
     link(rel="stylesheet",href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="//maps.googleapis.com/maps/api/js?v=3.exp")
