--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,6 +72,8 @@ button label{
 .adp-warnbox{
   display: none;
 }
+
+/*fake vibrate for demonstration*/
 @-webkit-keyframes spaceboots {
   0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
   10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
@@ -102,6 +104,8 @@ button label{
   height: 615px;
   width: 330px;
 }
+/*end fake vibrate for demonstration*/
+
 .logo{
   margin: 0 auto;
   opacity: .9;
