--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,7 +74,7 @@ button label{
 }
 
 /*fake vibrate for demonstration*/
-@-webkit-keyframes spaceboots {
+/*@-webkit-keyframes spaceboots {
   0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
   10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
   20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
@@ -103,7 +103,7 @@ button label{
   border-top: 30px solid black;
   height: 615px;
   width: 330px;
-}
+}*/
 /*end fake vibrate for demonstration*/
 
 .logo{
