--- a/views/index.jade
+++ b/views/index.jade
@@ -82,19 +82,19 @@ block content
       #directionsPanel.col-xs-offset-2.col-xs-8
     .row
       #warnings_panel(style='width:100%;height:10%;text-align:center')
-    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      #phone.modal-dialog
-        #innerModalDiv.modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-label='Close')
-              span(aria-hidden='true') ×
-            h4#myModalLabel.modal-title This is your phone:
-          .modal-body
-            | IT'S VIBRATING :)
-            br
-            br
-            | YOU'RE NO LONGER AIMLESS 
-            br
-            br
-            | TAKE AIM FOR YOUR DESTINATION!!!
-          .modal-footer
+    //- #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    //-   #phone.modal-dialog
+    //-     #innerModalDiv.modal-content
+    //-       .modal-header
+    //-         button.close(type='button', data-dismiss='modal', aria-label='Close')
+    //-           span(aria-hidden='true') ×
+    //-         h4#myModalLabel.modal-title This is your phone:
+    //-       .modal-body
+    //-         | IT'S VIBRATING :)
+    //-         br
+    //-         br
+    //-         | YOU'RE NO LONGER AIMLESS 
+    //-         br
+    //-         br
+    //-         | TAKE AIM FOR YOUR DESTINATION!!!
+    //-       .modal-footer
