--- a/views/index.jade
+++ b/views/index.jade
@@ -13,38 +13,19 @@ block content
             span.icon-bar
       #navbar.navbar-collapse.collapse(aria-expanded='false', style='height: 1px;')
         ul.nav.navbar-nav
-          li.active
-            a(href='#')
           li
-            a(href='#about') About
+            a(href='#') Login
           li
-            a(href='#contact') Contact
-          li.dropdown
-            a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
-              | Dropdown 
-              span.caret
-            ul.dropdown-menu(role='menu')
-              li
-                a(href='#') Action
-              li
-                a(href='#') Another action
-              li
-                a(href='#') Something else here
-              li.divider
-              li.dropdown-header Nav header
-              li
-                a(href='#') Separated link
-              li
-                a(href='#') One more separated link
+            a(href='#') Past Aimlessness
         ul.nav.navbar-nav.navbar-right
-          li
-            a(href='../navbar/') Default
-          li
-            a(href='../navbar-static-top/') Static top
           li.active
             a(href='./')
-              | Fixed top 
+              | Walk 
               span.sr-only (current)
+          li
+            a(href='#') Bike
+          li
+            a(href='#') Moped
   .topTron
     .container
       .row
