--- a/views/index.jade
+++ b/views/index.jade
@@ -30,7 +30,7 @@ block content
     .container
       .row
         #logo.center-block
-          img(src='../images/Aimless.svg', alt='Aimless', class="col-xs-12 logo", id="aimlessLogo")
+          img(src='../images/AimlessConvert.svg', alt='Aimless', class="col-xs-12 logo", id="aimlessLogo")
   .bottomTron
     .container
       .row
