--- a/views/index.jade
+++ b/views/index.jade
@@ -42,7 +42,7 @@ block content
         //     input(type="password", name="password", placeholder="Password")
         //     input(class="btn btn-primary",type="submit")
       .row
-        .col-xs-12
+        .col-xs-12.clock
           input(type="time", id="timeToReturn", required)
       .row    
         .col-xs-12.btnDiv
