--- a/views/index.jade
+++ b/views/index.jade
@@ -34,7 +34,8 @@ block content
   .bottomTron
     .container
       .row
-        p.col-xs-12.readText Going for an aimless walk? Simply select the time you need to be back by and we'll let you know when and how to get back.
+        .col-xs-12.readText Going for an aimless walk? Simply select the time you need to be back by and we'll let you know when and how to get back. 
+          .instruction (only works with Chrome on an android; iphone compatibility coming soon!)
       
         // div.col-sm-12 Sign in to store your walks and see how much area you've explored!
         //   form(action="/auth/login", method="post")
