--- a/views/index.jade
+++ b/views/index.jade
@@ -13,8 +13,27 @@ block content
             span.icon-bar
       #navbar.navbar-collapse.collapse(aria-expanded='false', style='height: 1px;')
         ul.nav.navbar-nav
-          li
-            a(href='#') Login
+          li.dropdown
+            a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+              | Login 
+              span.caret
+            ul.dropdown-menu(role='menu')
+              li.dropLogin
+                h3 Past Users
+              li.dropLogin
+                form
+                  .form-group
+                    label(for="enterEmail") Your email
+                    input(type="email", placeholder="email", class="form-control", id="enterEmail")
+                    label(for="enterPassword") A password
+                    input(type="password", class="form-control", id="enterPassword")
+                  button.btn.btn-default(type='submit') Submit
+              li.divider
+              //- li.dropdown-header Nav header
+              li
+                a(href='#') Separated link
+              li
+                a(href='#') One more separated link
           li
             a(href='#') Past Aimlessness
         ul.nav.navbar-nav.navbar-right
