--- a/views/index.jade
+++ b/views/index.jade
@@ -13,37 +13,44 @@ block content
             span.icon-bar
       #navbar.navbar-collapse.collapse(aria-expanded='false', style='height: 1px;')
         ul.nav.navbar-nav
-          li.dropdown
-            a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
-              | Login 
-              span.caret
-            ul.dropdown-menu(role='menu')
-              li.dropLogin
-                h3 Already Aimless?
-              li.dropLogin
-                form
-                  .form-group
-                    label(for="enterEmail") Your email
-                    input(type="email", placeholder="email", class="form-control", id="enterEmail")
-                    label(for="enterPassword") A password
-                    input(type="password", class="form-control", id="enterPassword")
-                  button.btn.btn-default(type='submit') Submit
-              li.divider
-              //- li.dropdown-header Nav header
-              li.dropLogin
-                h3 Want to be Aimless?
-              li.dropLogin
-                form
-                  .form-group
-                    label(for="enterEmail1") Your email
-                    input(type="email", placeholder="email", class="form-control", id="enterEmail1")
-                    label(for="enterPassword1") A password
-                    input(type="password", class="form-control", id="enterPassword1")
-                    label(for="enterPassword2") Confirm
-                    input(class="form-control", id="enterPassword2", type="password")
-                  button.btn.btn-default(type='submit') Submit
-          li
-            a(href='#') Past Aimlessness
+          if (!user)
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+                | Login 
+                span.caret
+              ul.dropdown-menu(role='menu')
+                li.dropLogin
+                  h3 Already Aimless?
+                li.dropLogin
+                  form(role='form', action="/login",method="post")
+                    .form-group
+                      label(for="enterEmail") Your email
+                      input(type="email", placeholder="email", class="form-control", id="enterEmail")
+                      label(for="enterPassword") A password
+                      input(type="password", class="form-control", id="enterPassword")
+                    button.btn.btn-default(type='submit') Submit
+                    &nbsp;
+                    a(href='/')
+                      button.btn.btn-primary(type="button") Cancel
+                li.divider
+                //- li.dropdown-header Nav header
+                li.dropLogin
+                  h3 Want to be Aimless?
+                li.dropLogin
+                  form(role='form', action="/register",method="post")
+                    .form-group
+                      label(for="enterEmail1") Your email
+                      input(type="email", placeholder="email", class="form-control", id="enterEmail1")
+                      label(for="enterPassword1") A password
+                      input(type="password", class="form-control", id="enterPassword1")
+                      label(for="enterPassword2") Confirm
+                      input(class="form-control", id="enterPassword2", type="password")
+                    button.btn.btn-default(type='submit') Submit
+          if (user)
+            li
+              a(href='#') #{user.username}'s Past Aimlessness
+            li
+              a(href="/logout") Logout
         ul.nav.navbar-nav.navbar-right
           li.active
             a(href='./')
